--- a/index.ejs
+++ b/index.ejs
@@ -6,6 +6,160 @@
     <title>webpack3 boilerplate</title>
 </head>
 <body>
-  <p>Boilerplate is up and ready</p>
+  <header class="header">
+    <div class="topbar">
+        <div class="menu">
+          <div class="menu__bars-container">
+            <span class="menu__bar">&nbsp;</span>
+            <span class="menu__bar">&nbsp;</span>
+            <span class="menu__bar">&nbsp;</span>
+          </div>
+          menu
+        </div>
+    
+        <nav class="navigation">
+          <h3 class="logo">Wooder</h3>
+
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Home</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Products</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">About</a>
+            </li>
+          </ul>
+        </nav>
+    
+        <div class="info-box">
+          <a href="#" class="info-box__icon"><span class="icon-basic-info"></span></a>
+          <a href="#" class="info-box__language">EN</a>
+        </div>
+    </div>
+    
+    <div class="background-container">
+      <div class="background-container__left">&nbsp;</div>
+      <div class="background-container__right">&nbsp;</div>
+    </div>
+
+   <div class="header__text-box">
+     <h1 class="header__title">Wooder</h1>
+     <button class="btn-inline">Learn more <span class="right-arrow"></span></button>
+
+     <div class="header__pointer">
+      <span class="icon-basic-magic-mouse"></span>
+      <span class="down-arrow"></span>
+      <p class="vertical-text">Scroll</p>
+     </div>
+   </div> 
+
+   <p class="vertical-text-right">Furniture & Decor</p>
+
+   <div class="vertical-numbers">
+     <p class="vertical-numbers__numbers">01</p>
+     <span></span>
+     <span></span>
+     <span></span>
+     <span></span>
+   </div>
+
+   <span class="header__share icon-basic-share"></span>
+
+   <span class="header__vertical-line"></span>
+
+  </header>
+
+  <main>
+        
+    <section class="furniture">
+      <div class="furniture__text">
+        <div class="furniture__wrap">
+            <span class="furniture__letter">F</span>
+            <h3 class="title">
+              <span class="title__line-left"></span>
+              Furniture
+            </h3>
+            <p class="description">
+                <span class="description__line-left"></span>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore veritatis voluptatibus earum eum perferendis quas ab accusantium fuga illo at. Ipsa dicta neque perferendis, laborum ipsam fuga quibusdam sequi possimus?
+            </p>
+            <button class="btn">Learn more <span class="right-arrow"></span></button>
+            <span class="number number-left">
+              01
+            </span>
+        </div> 
+      </div>
+      
+      <div class="furniture__picture-container">
+        <div class="furniture__picture">
+        </div>
+        <span class="furniture__word">Furniture</span>
+      </div>
+
+    </section>
+
+    <section class="decor">
+      <div class="decor__picture-container">
+        <div class="decor__picture">
+        </div>
+        <span class="decor__word">Decor</span>
+      </div>
+
+      <div class="decor__text">
+        <div class="decor__wrap">
+          <span class="decor__letter">D</span>
+          <h3 class="title">
+            <span class="title__line-right"></span>
+            Decor
+          </h3>
+          <p class="description">
+              <span class="description__line-right"></span>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore veritatis voluptatibus earum eum perferendis quas ab accusantium fuga illo at. Ipsa dicta neque perferendis, laborum ipsam fuga quibusdam sequi possimus?
+          </p>
+          <button class="btn">Learn more <span class="right-arrow"></span></button>
+          <span class="number number-right">
+            02
+          </span>
+        </div> 
+      </div>
+      
+    </section>
+
+    <section class="quality">
+      <h3 class="title center">Wooder - is quality</h3>
+
+      <div class="quality__text-container">
+        <p class="description center">
+          <span class="description__line-top"></span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore veritatis voluptatibus earum eum perferendis quas ab accusantium fuga illo at. Ipsa dicta neque perferendis, laborum ipsam fuga quibusdam sequi possimus?
+        </p>
+      </div> 
+      
+      <div class="quality__video-container">
+        <div class="quality__video-image">
+          <img src="./assets/img/video-img-1.png" alt="img-1">
+          <span class="quality__video-button">
+          </span>
+          <span class="quality__video-name">Innovative Design</span>
+        </div>
+        <div class="quality__video-image">
+          <img src="./assets/img/video-img-2.png" alt="img-2">
+          <span class="quality__video-button"></span>
+          <span class="quality__video-name">Hight-level Skills</span>
+        </div>
+        <div class="quality__video-image">
+          <img src="./assets/img/video-img-3.png" alt="img-3">
+          <span class="quality__video-button">
+          </span>
+          <span class="quality__video-name">Quality Products</span>
+        </div>
+      </div>
+      
+    </section>
+    
+  </main>
+  
 </body>
 </html>
