--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,8 +16,11 @@
 @import './components/furniture';
 @import './components/decor';
 @import './components/quality';
+@import './components/design';
+@import './components/about';
 
 
 @import './layout/header';
+@import './layout/footer';
 
 @import './vendor/styles';
