--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>webpack3 boilerplate</title>
+    <title>Wooder</title>
 </head>
 <body>
   <header class="header">
@@ -141,24 +141,91 @@
         <div class="quality__video-image">
           <img src="./assets/img/video-img-1.png" alt="img-1">
           <span class="quality__video-button">
+              <svg class="quality__play-icon">
+                <use xlink:href="./assets/img/symbol-defs.svg#icon-play3"/>
+              </svg>
           </span>
           <span class="quality__video-name">Innovative Design</span>
         </div>
         <div class="quality__video-image">
           <img src="./assets/img/video-img-2.png" alt="img-2">
-          <span class="quality__video-button"></span>
+          <span class="quality__video-button">
+            <svg class="quality__play-icon">
+              <use xlink:href="./assets/img/symbol-defs.svg#icon-play3"/>
+            </svg>
+          </span>
           <span class="quality__video-name">Hight-level Skills</span>
         </div>
         <div class="quality__video-image">
           <img src="./assets/img/video-img-3.png" alt="img-3">
           <span class="quality__video-button">
+            <svg class="quality__play-icon">
+              <use xlink:href="./assets/img/symbol-defs.svg#icon-play3"/>
+            </svg>
           </span>
           <span class="quality__video-name">Quality Products</span>
         </div>
       </div>
       
     </section>
-    
+
+    <section class="design">
+
+      <div class="design__box">
+        <div class="design__wrap">
+          <h3 class="title title-wood">
+            <span class="title__line-left title__line-left-white"></span>
+            We do the design of any complexity
+          </h3>
+          <p class="description description-white">
+            <span class="description__line-left"></span>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore veritatis voluptatibus earum eum perferendis quas ab accusantium fuga illo at. Ipsa dicta neque perferendis, laborum ipsam fuga quibusdam sequi possimus?
+          </p>
+          <button class="btn-inline design__btn">
+            <svg class="design__play-icon">
+              <use xlink:href="./assets/img/symbol-defs.svg#icon-play2"/>
+            </svg>
+            Watch video
+          </button>
+        </div>   
+      </div>
+
+      <span class="vertical-line vertical-line-white"></span>
+
+      <span class="design__letter">W</span>
+
+      <img src="./assets/img/play-big.png" alt="img" class="design__image">
+    </section>
+
+    <section class="about">
+        <div class="about__picture-container">
+          <div class="about__picture">
+          </div>
+          <span class="about__word">About</span>
+        </div>
+
+        <div class="about__text">
+          <div class="about__wrap">
+              <span class="about__letter">A</span>
+              <h3 class="title">
+                <span class="title__line-left"></span>
+                about
+              </h3>
+              <p class="description">
+                  <span class="description__line-left"></span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore veritatis voluptatibus earum eum perferendis quas ab accusantium fuga illo at. Ipsa dicta neque perferendis, laborum ipsam fuga quibusdam sequi possimus?
+              </p>
+              <button class="btn">Learn more <span class="right-arrow"></span></button>
+          </div> 
+        </div>
+    </section>
+
+    <footer class="footer">
+      <span class="copyright">&copy; 2018 Wooder</span>
+      <h3 class="logo">Wooder</h3>
+      <span class="designed"><span class="darker">Designed</span> by Vacheslav Olianishyn</span>
+      <span class="designed"><span class="darker">Developed</span> by Oleg Veskelen</span>
+    </footer>
   </main>
   
 </body>
