--- a/assets/styles/components/_backgrounds-container.scss
+++ b/assets/styles/components/_backgrounds-container.scss
@@ -13,6 +13,8 @@
 		position: relative;
 		flex: 0 0 55%;
 		background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-1.png');
+		background-size: cover;
+		background-repeat: no-repeat;
 		&::after{
 			content: '';
 			position: absolute;
@@ -27,5 +29,7 @@
 	&__right{
 		flex: 0 0 45%;
 		background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-2.png');
+		background-size: cover;
+		background-repeat: no-repeat;
 	}
 }
