--- a/assets/styles/components/_btn.scss
+++ b/assets/styles/components/_btn.scss
@@ -6,12 +6,19 @@
     font-size: 1.6rem;
     font-family: 'proximaB';
     position: relative;
+    transition: all .3s;
+    padding: .3rem;
+    cursor: pointer;
 
     &:focus{
         outline: none;
     }
     &:active{
         transform: translateY(2px);
+    }
+    &:hover{
+        transform: translateY(-.5rem);
+        box-shadow: 0rem 1rem 3rem .3rem rgba($color-font-primary, .1);
     }
 
     &::before{
