--- a/assets/styles/components/_quality.scss
+++ b/assets/styles/components/_quality.scss
@@ -39,11 +39,19 @@
         left: 50%;
         transform: translate(-50%, -50%);
         cursor: pointer;
+        transition: all .4s;
+    }
+
+    &__video-wrap{
+        height: 100%;
+        border-radius: 50%;
+        position: relative;
+        overflow: hidden;
     }
 
     &__video-image{
-        max-width: 25rem;
-        max-height: 25rem;
+        width: 25rem;
+        height: 25rem;
         border: 1px solid $color-grey;
         border-radius: 50%;
         padding: 1rem;
@@ -51,11 +59,20 @@
         position: relative;
 
         img{
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            object-fit: cover;
             display: block;
+            height: 100%;
+            transform: translateX(-4rem) scale(1.4);
+            transition: all .5s;
+            backface-visibility: hidden;
+        }
+
+        &:hover img{
+            transform: translateX(-4rem) scale(1);
+            filter: blur(3px) brightness(80%);
+        }
+
+        &:hover .quality__video-button{
+            transform: translate(-50%, -50%) scale(1.3);
         }
     }
 
