--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,26 +1,30 @@
 
 @import './abstracts/variables';
+@import './abstracts/mixins';
 
 @import './base/base';
 @import './base/typography';
 @import './base/utilities';
 
+@import './pages/home';
+
 @import './components/topbar';
 @import './components/logo';
-@import './components/navigation';
 @import './components/menu';
 @import './components/info-box';
 @import './components/backgrounds-container';
 @import './components/btn-inline';
 @import './components/btn';
-@import './components/furniture';
-@import './components/decor';
 @import './components/quality';
 @import './components/design';
-@import './components/about';
+@import './components/description-box';
+@import './components/picture-box';
+
 
 
 @import './layout/header';
+@import './layout/navigation';
 @import './layout/footer';
 
 @import './vendor/styles';
+
