--- a/index.ejs
+++ b/index.ejs
@@ -10,11 +10,23 @@
     <div class="topbar">
         <div class="menu">
           <div class="menu__bars-container">
-            <span class="menu__bar">&nbsp;</span>
-            <span class="menu__bar">&nbsp;</span>
-            <span class="menu__bar">&nbsp;</span>
+              <input type="checkbox" id="menu-toggle" class="menu__checkbox">
+              <label for="menu-toggle" class="menu__button">
+                  <span class="menu__bar">&nbsp;</span>
+                  <span class="menu__bar">&nbsp;</span>
+                  <span class="menu__bar">&nbsp;</span>
+              </label>
+              <div class="menu__background">
+                <ul class="menu__wrap">
+                  <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+                  <li class="menu__item"><a class="menu__link" href="#">Product</a></li>
+                  <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+                </ul>
+              </div>
           </div>
-          menu
+          <span class="menu__name">
+            menu
+          </span>
         </div>
     
         <nav class="navigation">
