--- a/assets/styles/components/_menu.scss
+++ b/assets/styles/components/_menu.scss
@@ -5,17 +5,131 @@
     font-family: 'proximaB';
     color: $color-grey-1;
     font-size: 2rem;
-    cursor: pointer;
+
+    &__link, 
+    &__link:link, 
+    &__link:visited {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-family: 'proximaB';
+        position: relative;
+        color: $color-white;
+        font-size: 4rem;
+        letter-spacing: .3rem;
+
+        &::before{
+            content: '';
+            position: absolute;
+            height: .6rem;
+            width: 0;
+            background-color: $color-wood;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0;
+            transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) .4s;
+        }
+
+        &:hover{
+            &::before{
+                width: 100%;
+            }
+        }
+    }
+
+    &__wrap{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        list-style: none;
+    }
+
+    &__item{
+        opacity: 0;
+    }
+
+    &__background{
+        position: absolute;
+        width: 0vw;
+        background-color: rgba($color-font-primary, .99);
+        height: 100vh;
+        top: -3rem;
+        left: -3rem;
+        transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s;
+    }
+
+    &__checkbox{
+        display: none;
+    }
+
+    &__button{
+        cursor: pointer;
+        z-index: 1;
+        position: relative;
+        display: block;
+
+        &:hover .menu__bar{
+            &:nth-of-type(3){
+                transform: translateY(.4rem);
+            }
+            &:nth-of-type(1){
+                transform: translateY(-.4rem);
+            }
+        }
+    }
     
     &__bars-container{
-        margin-right: 2rem;
+        position: fixed;
+        z-index: 100;
+    }
+
+    &__name{
+        margin-left: 6rem;
+    }
+
+    &__checkbox:checked ~ &__background{
+        width: 100vw;
+        box-shadow: 0rem 0rem 0 3px $color-font-primary;
+    }
+
+    &__checkbox:checked ~ &__background &__wrap &__item:nth-child(1){
+        animation: moveInLeft .5s ease-out .55s;
+        animation-fill-mode: backwards;
+        opacity: 1;
+    }
+
+    &__checkbox:checked ~ &__background &__wrap &__item:nth-child(2){
+        animation: moveInRight .5s ease-out .55s;
+        animation-fill-mode: backwards;
+        opacity: 1;
+    }
+
+    &__checkbox:checked ~ &__background &__wrap &__item:nth-child(3){
+        animation: moveInLeft .5s ease-out .55s;
+        animation-fill-mode: backwards;
+        opacity: 1;
+    }
+
+
+    &__checkbox:checked + &__button &__bar:nth-child(2){
+        background-color: transparent;
+    }
+
+    &__checkbox:checked + &__button &__bar:nth-child(1){
+        transform: rotate(135deg) translateY(-2rem);
+    }
+
+    &__checkbox:checked + &__button &__bar:nth-child(3){
+        transform: rotate(-135deg) translateY(2rem);
     }
 
     &__bar{
+        position: relative;
         background-color: $color-wood;
         width: 4.5rem;
         height: 2px;
         display: block;
+        transition: all .3s;
 
         &:not(:last-child){
             margin-bottom: 1.3rem;
