--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -20,6 +20,7 @@
 @import './components/design';
 @import './components/description-box';
 @import './components/picture-box';
+@import './components/popup';
 
 
 
