--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -11,6 +11,13 @@
     margin-top: 15rem;
     position: relative;
     padding-bottom: 10rem;
+
+    @include respond(phone){
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 0;
+    }
 }
 
 @mixin transparent-word{
@@ -21,4 +28,28 @@
     top: 50%;
     transform: translateY(-50%);
     text-transform: uppercase;
+}
+
+// - phone
+// - tab-port
+// - tab-land
+// - big-desktop
+//1em = 16px
+
+@mixin respond($breakpoint){
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 37.5em){@content}; //600px
+    }
+
+    @if $breakpoint == tab-port {
+        @media only screen and (max-width: 56.25em){@content}; //900px
+    }
+
+    @if $breakpoint == tab-land {
+        @media only screen and (max-width: 75em){@content}; //1200px
+    }
+
+    @if $breakpoint == big-desktop {
+        @media only screen and (min-width: 112.5em){@content}; //1800px
+    }
 }
