--- a/assets/styles/components/_btn-inline.scss
+++ b/assets/styles/components/_btn-inline.scss
@@ -8,9 +8,14 @@
 	text-transform: uppercase;
 	letter-spacing: .5rem;
 	cursor: pointer;
+	transition: all .4s;
 
 	&:focus{
 		outline: none;
+	}
+
+	&:hover{
+		letter-spacing: 1rem;
 	}
 	
 }
