--- a/assets/styles/components/_quality.scss
+++ b/assets/styles/components/_quality.scss
@@ -8,6 +8,11 @@
         display: flex;
         justify-content: center;
         margin-top: 8rem;
+
+        @include respond(phone){
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__video-name{
@@ -57,6 +62,13 @@
         padding: 1rem;
         margin-right: 8rem;
         position: relative;
+
+        @include respond(phone){
+            margin-right: 0;
+            &:not(:last-child){ 
+                margin-bottom: 8rem;
+            }
+        }
 
         img{
             display: block;
